[gd_scene load_steps=7 format=3 uid="uid://dw3cw6bi88ke8"]

[ext_resource type="Script" path="res://Scripts/upgrades.gd" id="1_6fcv3"]
[ext_resource type="Texture2D" uid="uid://dytgv17hkdxr8" path="res://ASSETS/Task/task_button.png" id="3_0new6"]
[ext_resource type="Texture2D" uid="uid://c7rmim5y62a2n" path="res://ASSETS/windows/windows_border.png" id="3_j0gk0"]
[ext_resource type="Script" path="res://Scripts/upgrade_shop.gd" id="3_n5r8t"]
[ext_resource type="Script" path="res://Scripts/upgrade_info.gd" id="4_rjq78"]
[ext_resource type="FontFile" uid="uid://2t3fwfyco16d" path="res://FONTS/super-pixel-font/SuperPixel-m2L8j.ttf" id="5_l0ups"]

[node name="UPGRADES" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fcv3")

[node name="EXIT" type="Button" parent="."]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
top_level = true
layout_mode = 0
offset_left = 1852.0
offset_right = 1920.0
offset_bottom = 67.0

[node name="Upgrade shop" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = -808.0
offset_top = -560.0
offset_right = -808.0
offset_bottom = -560.0
script = ExtResource("3_n5r8t")

[node name="TextureRect" type="TextureRect" parent="Upgrade shop"]
layout_mode = 0
offset_left = -149.0
offset_top = 16.0
offset_right = 1771.0
offset_bottom = 1096.0
texture = ExtResource("3_j0gk0")

[node name="ScrollContainer" type="ScrollContainer" parent="Upgrade shop"]
layout_mode = 0
offset_left = 16.0
offset_top = 82.0
offset_right = 492.0
offset_bottom = 1058.0

[node name="VBoxContainer" type="VBoxContainer" parent="Upgrade shop/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 26

[node name="Upgrade_1" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_1Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_1"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Firewall Shield"
horizontal_alignment = 1

[node name="UpButton_1" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_1"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_2" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_2Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_2"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Phish Finder"
horizontal_alignment = 1

[node name="UpButton_2" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_2"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_3" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_3Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_3"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Email Analyzer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_3" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_3"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_4" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_4Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_4"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Time Freeze"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_4" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_4"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_5" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_5Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_5"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Trusted Contacts"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_5" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_5"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_6" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_6Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_6"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Decryption Key"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_6" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_6"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_7" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_7Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_7"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Anti-Malware Drone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_7" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_7"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_8" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_8Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_8"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Security Quiz Boost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_8" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_8"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_9" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_9Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_9"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Link Validator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_9" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_9"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="Upgrade_10" type="TextureRect" parent="Upgrade shop/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0new6")

[node name="Upgrade_10Label" type="Label" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_10"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 431.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Double Verification"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton_10" type="Button" parent="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_10"]
layout_mode = 0
offset_left = 124.0
offset_top = 59.0
offset_right = 281.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 25
text = "U P G R A D E"

[node name="UpgradeInfo" type="Control" parent="Upgrade shop"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_rjq78")

[node name="Upgrade_Info_MainTitle" type="Label" parent="Upgrade shop/UpgradeInfo"]
layout_mode = 0
offset_left = 979.0
offset_top = 84.0
offset_right = 1526.0
offset_bottom = 161.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_l0ups")
theme_override_font_sizes/font_size = 56
text = "UPGRADE INFO:"

[node name="Upgrade_Info_Title" type="Label" parent="Upgrade shop/UpgradeInfo"]
layout_mode = 0
offset_left = 516.0
offset_top = 155.0
offset_right = 1873.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Hover over an upgrade"
autowrap_mode = 3

[node name="Upgrade_Info_Description" type="Label" parent="Upgrade shop/UpgradeInfo"]
layout_mode = 0
offset_left = 512.0
offset_top = 298.0
offset_right = 1726.0
offset_bottom = 1041.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
autowrap_mode = 3

[connection signal="pressed" from="EXIT" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_1" to="Upgrade shop" method="_on_upgrade_1_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_2" to="Upgrade shop" method="_on_upgrade_2_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_3" to="Upgrade shop" method="_on_upgrade_3_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_4" to="Upgrade shop" method="_on_upgrade_4_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_5" to="Upgrade shop" method="_on_upgrade_5_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_6" to="Upgrade shop" method="_on_upgrade_6_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_7" to="Upgrade shop" method="_on_upgrade_7_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_8" to="Upgrade shop" method="_on_upgrade_8_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_9" to="Upgrade shop" method="_on_upgrade_9_mouse_entered"]
[connection signal="mouse_entered" from="Upgrade shop/ScrollContainer/VBoxContainer/Upgrade_10" to="Upgrade shop" method="_on_upgrade_10_mouse_entered"]
